--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 AddHandler x-httpd-php .html .htm
 DirectoryIndex index.html index.htm default.htm index.php
-AddType video/mp4 ".mp4"
+AddType video/mp4 .mp4
